@@ -23,6 +23,7 @@
 	added neko.zip.Writer and neko.zip.CRC32
 	fixed multilevel Transform.block_vars
 	added js.SWFObject
+	fixes for if/switch with null or Null<T> on Flash9
 
 2008-01-13: 1.17
 	fixed Int32.compare, added Int32.read and Int32.write
